Bug 491637 - Dolphin crashes in KIO::RenameDialog::RenameDialog() during copy
Summary: Dolphin crashes in KIO::RenameDialog::RenameDialog() during copy
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: drkonqi
: 465097 471985 486244 498607 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-08-12 18:47 UTC by Nicolas Fella
Modified: 2025-01-13 19:55 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Frameworks 6.6
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/57334/events/e4a060cc7e1e4c7d88c2bf7f06616fd0/


Attachments
New crash information added by DrKonqi (112.29 KB, text/plain)
2024-08-12 18:47 UTC, Nicolas Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2024-08-12 18:47:54 UTC
Application: dolphin (24.11.70)
 (Compiled from sources)
ApplicationNotResponding [ANR]: false
Qt Version: 6.8.0
Frameworks Version: 6.6.0
Operating System: Linux 6.10.3-200.fc40.x86_64 x86_64
Windowing System: Wayland
Distribution: "Fedora Linux 40 (KDE Plasma)"
DrKonqi: 6.1.80 [CoredumpBackend]

-- Information about the crash:
- Open Dolphin
- Create new folder
- Split view
- Navigate one half to a folder with lots of files
- Copy one file to the newly created folder
- Copy all other files to the new folder
- Close the destination view before the copying finishes

The crash can be reproduced every time.

-- Backtrace (Reduced):
#5  0x00007f69074b6453 in QScopedScopeLevelCounter::QScopedScopeLevelCounter (this=this@entry=0x7ffea0002688, threadData=0x61) at /home/nico/workspace/qt6/qtbase/src/corelib/thread/qthread.cpp:155
#6  0x00007f6907394cc2 in QCoreApplication::notifyInternal2 (receiver=0x164fac70, event=0x7ffea0002790) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qcoreapplication.cpp:1146
#7  0x00007f6907394fed in QCoreApplication::sendEvent (receiver=<optimized out>, event=<optimized out>) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qcoreapplication.cpp:1598
#8  0x00007f69085f0873 in QWidget::setParent (this=this@entry=0x18b52410, parent=<optimized out>, parent@entry=0x164fac70, f=...) at /home/nico/workspace/qt6/qtbase/src/widgets/kernel/qwidget.cpp:10815
#9  0x00007f69085f15d5 in QWidgetPrivate::init (this=<optimized out>, parentWidget=0x164fac70, f=...) at /home/nico/workspace/qt6/qtbase/src/widgets/kernel/qwidget.cpp:997


Reported using DrKonqi
Comment 1 Nicolas Fella 2024-08-12 18:47:55 UTC
Created attachment 172557 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 Nicolas Fella 2024-08-12 19:39:13 UTC
#5  0x00007f69074b6453 in QScopedScopeLevelCounter::QScopedScopeLevelCounter (this=this@entry=0x7ffea0002688, threadData=0x61) at /home/nico/workspace/qt6/qtbase/src/corelib/thread/qthread.cpp:155
#6  0x00007f6907394cc2 in QCoreApplication::notifyInternal2 (receiver=0x164fac70, event=0x7ffea0002790) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qcoreapplication.cpp:1146
#7  0x00007f6907394fed in QCoreApplication::sendEvent (receiver=<optimized out>, event=<optimized out>) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qcoreapplication.cpp:1598
#8  0x00007f69085f0873 in QWidget::setParent (this=this@entry=0x18b52410, parent=<optimized out>, parent@entry=0x164fac70, f=...) at /home/nico/workspace/qt6/qtbase/src/widgets/kernel/qwidget.cpp:10815
#9  0x00007f69085f15d5 in QWidgetPrivate::init (this=<optimized out>, parentWidget=0x164fac70, f=...) at /home/nico/workspace/qt6/qtbase/src/widgets/kernel/qwidget.cpp:997
#10 0x00007f69085f1c6c in QWidget::QWidget (this=<optimized out>, dd=<optimized out>, parent=<optimized out>, f=...) at /home/nico/workspace/qt6/qtbase/src/widgets/kernel/qwidget.cpp:873
#11 0x00007f690881a8dd in QDialog::QDialog (this=0x18b52410, parent=0x164fac70, f=...) at /home/nico/workspace/qt6/qtbase/src/widgets/dialogs/qdialog.cpp:368
#12 0x00007f690a8d08ec in KIO::RenameDialog::RenameDialog (this=0x18b52410, parent=0x164fac70, title=..., _src=..., _dest=..., _options=..., sizeSrc=172673, sizeDest=172673, ctimeSrc=..., ctimeDest=..., mtimeSrc=..., mtimeDest=...) at /home/nico/kde/src/kio/src/widgets/renamedialog.cpp:215
#13 0x00007f690a8f4e1c in operator() (__closure=0x1680f9e0) at /home/nico/kde/src/kio/src/widgets/widgetsaskuseractionhandler.cpp:169
#14 0x00007f690a8faf27 in operator() (__closure=0x7ffea0003650) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:142
#15 0x00007f690a8fb18a in QtPrivate::FunctorCallBase::call_internal<void, QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, KIO::WidgetsAskUserActionHandler::askUserRename(KJob*, const QString&, const QUrl&, const QUrl&, KIO::RenameDialog_Options, KIO::filesize_t, KIO::filesize_t, const QDateTime&, const QDateTime&, const QDateTime&, const QDateTime&)::<lambda()> >::call(KIO::WidgetsAskUserActionHandler::askUserRename(KJob*, const QString&, const QUrl&, const QUrl&, KIO::RenameDialog_Options, KIO::filesize_t, KIO::filesize_t, const QDateTime&, const QDateTime&, const QDateTime&, const QDateTime&)::<lambda()>&, void**)::<lambda()> >(void **, struct {...} &&) (args=0x7ffea00037b0, fn=...) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:72
#16 0x00007f690a8faf5d in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, KIO::WidgetsAskUserActionHandler::askUserRename(KJob*, const QString&, const QUrl&, const QUrl&, KIO::RenameDialog_Options, KIO::filesize_t, KIO::filesize_t, const QDateTime&, const QDateTime&, const QDateTime&, const QDateTime&)::<lambda()> >::call(struct {...} &, void **) (f=..., arg=0x7ffea00037b0) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:141
#17 0x00007f690a8faba3 in QtPrivate::FunctorCallable<KIO::WidgetsAskUserActionHandler::askUserRename(KJob*, const QString&, const QUrl&, const QUrl&, KIO::RenameDialog_Options, KIO::filesize_t, KIO::filesize_t, const QDateTime&, const QDateTime&, const QDateTime&, const QDateTime&)::<lambda()> >::call<QtPrivate::List<>, void>(struct {...} &, void *, void **) (f=..., arg=0x7ffea00037b0) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:363
#18 0x00007f690a8fa6ab in QtPrivate::QCallableObject<KIO::WidgetsAskUserActionHandler::askUserRename(KJob*, const QString&, const QUrl&, const QUrl&, KIO::RenameDialog_Options, KIO::filesize_t, KIO::filesize_t, const QDateTime&, const QDateTime&, const QDateTime&, const QDateTime&)::<lambda()>, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=1, this_=0x1680f9d0, r=0x7ffea0004f40, a=0x7ffea00037b0, ret=0x0) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:573
#19 0x00007f69073a58d2 in QtPrivate::QSlotObjectBase::call (this=0x1680f9d0, r=0x7ffea0004f40, a=0x7ffea00037b0) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qobjectdefs_impl.h:487
#20 QMetaObject::invokeMethodImpl (object=0x7ffea0004f40, slotObj=0x1680f9d0, type=<optimized out>, parameterCount=1, params=0x7ffea00037b0, names=<optimized out>, metaTypes=0x7ffea00037c0) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qmetaobject.cpp:1639
#21 0x00007f690a8f9466 in QMetaObject::invokeMethodCallableHelper<KIO::WidgetsAskUserActionHandler::askUserRename(KJob*, const QString&, const QUrl&, const QUrl&, KIO::RenameDialog_Options, KIO::filesize_t, KIO::filesize_t, const QDateTime&, const QDateTime&, const QDateTime&, const QDateTime&)::<lambda()> >(QtPrivate::ContextTypeForFunctor<KIO::WidgetsAskUserActionHandler::askUserRename(KJob*, const QString&, const QUrl&, const QUrl&, KIO::RenameDialog_Options, KIO::filesize_t, KIO::filesize_t, const QDateTime&, const QDateTime&, const QDateTime&, const QDateTime&)::<lambda()>, void>::ContextType *, struct {...} &&, Qt::ConnectionType, const QMetaMethodReturnArgument &) (object=0x7ffea0004f40, function=..., type=Qt::AutoConnection, ret=...) at /home/nico/kde/usr/include/QtCore/qobjectdefs.h:624
#22 0x00007f690a8f902b in QMetaObject::invokeMethod<KIO::WidgetsAskUserActionHandler::askUserRename(KJob*, const QString&, const QUrl&, const QUrl&, KIO::RenameDialog_Options, KIO::filesize_t, KIO::filesize_t, const QDateTime&, const QDateTime&, const QDateTime&, const QDateTime&)::<lambda()> >(QtPrivate::ContextTypeForFunctor<KIO::WidgetsAskUserActionHandler::askUserRename(KJob*, const QString&, const QUrl&, const QUrl&, KIO::RenameDialog_Options, KIO::filesize_t, KIO::filesize_t, const QDateTime&, const QDateTime&, const QDateTime&, const QDateTime&)::<lambda()>, void>::ContextType *, struct {...} &&, Qt::ConnectionType, QTemplatedMetaMethodReturnArgument<void>) (object=0x7ffea0004f40, function=..., type=Qt::AutoConnection, ret=...) at /home/nico/kde/usr/include/QtCore/qobjectdefs.h:469
#23 0x00007f690a8f85a9 in QMetaObject::invokeMethod<KIO::WidgetsAskUserActionHandler::askUserRename(KJob*, const QString&, const QUrl&, const QUrl&, KIO::RenameDialog_Options, KIO::filesize_t, KIO::filesize_t, const QDateTime&, const QDateTime&, const QDateTime&, const QDateTime&)::<lambda()> >(QtPrivate::ContextTypeForFunctor<KIO::WidgetsAskUserActionHandler::askUserRename(KJob*, const QString&, const QUrl&, const QUrl&, KIO::RenameDialog_Options, KIO::filesize_t, KIO::filesize_t, const QDateTime&, const QDateTime&, const QDateTime&, const QDateTime&)::<lambda()>, void>::ContextType *, struct {...} &&) (object=0x7ffea0004f40, function=...) at /home/nico/kde/usr/include/QtCore/qobjectdefs.h:512
#24 0x00007f690a8f50eb in KIO::WidgetsAskUserActionHandler::askUserRename (this=0x199f8e30, job=0x18807490, title=..., src=..., dest=..., options=..., sizeSrc=172673, sizeDest=172673, ctimeSrc=..., ctimeDest=..., mtimeSrc=..., mtimeDest=...) at /home/nico/kde/src/kio/src/widgets/widgetsaskuseractionhandler.cpp:168
#25 0x00007f690a0b8117 in KIO::CopyJobPrivate::slotResultErrorCopyingFiles (this=0x2055fd00, job=0x1856cbb0) at /home/nico/kde/src/kio/src/core/copyjob.cpp:1720
#26 0x00007f690a0be238 in KIO::CopyJob::slotResult (this=0x18807490, job=0x1856cbb0) at /home/nico/kde/src/kio/src/core/copyjob.cpp:2564
#27 0x00007f69073fbcd2 in QtPrivate::QSlotObjectBase::call (this=0x16980ef0, r=<optimized out>, a=0x7ffea0003e30) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qobjectdefs_impl.h:487
#28 doActivate<false> (sender=0x1856cbb0, signal_index=6, argv=0x7ffea0003e30) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qobject.cpp:4120
#29 0x00007f69073f23b7 in QMetaObject::activate (sender=sender@entry=0x1856cbb0, m=m@entry=0x7f69095c2100 <KJob::staticMetaObject>, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0x7ffea0003e30) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qobject.cpp:4180
#30 0x00007f69095573b5 in KJob::result (this=this@entry=0x1856cbb0, _t1=<optimized out>, _t1@entry=0x1856cbb0, _t2=...) at /home/nico/kde/build/kcoreaddons/src/lib/KF6CoreAddons_autogen/include/moc_kjob.cpp:622
#31 0x00007f6909557dbb in KJob::finishJob (this=0x1856cbb0, emitResult=<optimized out>) at /home/nico/kde/src/kcoreaddons/src/lib/jobs/kjob.cpp:98
#32 0x00007f690a118d1f in KIO::SimpleJob::slotFinished (this=0x1856cbb0) at /home/nico/kde/src/kio/src/core/simplejob.cpp:229
#33 0x00007f690a11dae6 in KIO::StatJob::slotFinished (this=0x1856cbb0) at /home/nico/kde/src/kio/src/core/statjob.cpp:170
#34 0x00007f690a11c87b in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (KIO::SimpleJob::*)()>::call(void (KIO::SimpleJob::*)(), KIO::SimpleJob*, void**)::{lambda()#1}::operator()() const (__closure=0x7ffea0004040) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:153
#35 0x00007f690a11ca47 in QtPrivate::FunctorCallBase::call_internal<void, QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (KIO::SimpleJob::*)()>::call(void (KIO::SimpleJob::*)(), KIO::SimpleJob*, void**)::{lambda()#1}>(void**, QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (KIO::SimpleJob::*)()>::call(void (KIO::SimpleJob::*)(), KIO::SimpleJob*, void**)::{lambda()#1}&&) (args=0x7ffea0004198, fn=...) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:72
#36 0x00007f690a11c8de in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (KIO::SimpleJob::*)()>::call(void (KIO::SimpleJob::*)(), KIO::SimpleJob*, void**) (f=&virtual KIO::SimpleJob::slotFinished(), o=0x1856cbb0, arg=0x7ffea0004198) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:152
#37 0x00007f690a11c4dc in QtPrivate::FunctionPointer<void (KIO::SimpleJob::*)()>::call<QtPrivate::List<>, void>(void (KIO::SimpleJob::*)(), KIO::SimpleJob*, void**) (f=&virtual KIO::SimpleJob::slotFinished(), o=0x1856cbb0, arg=0x7ffea0004198) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:200
#38 0x00007f690a11c2a3 in QtPrivate::QCallableObject<void (KIO::SimpleJob::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x1692b120, r=0x1856cbb0, a=0x7ffea0004198, ret=0x0) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:571
#39 0x00007f69073fbcd2 in QtPrivate::QSlotObjectBase::call (this=0x1692b120, r=<optimized out>, a=0x7ffea0004198) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qobjectdefs_impl.h:487
#40 doActivate<false> (sender=0x1648c2e0, signal_index=7, argv=0x7ffea0004198) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qobject.cpp:4120
#41 0x00007f690a1d5141 in KIO::WorkerInterface::finished (this=0x1648c2e0) at /home/nico/kde/build/kio/src/core/KF6KIOCore_autogen/include/moc_workerinterface_p.cpp:512
#42 0x00007f690a1d2ab2 in KIO::WorkerInterface::dispatch (this=0x1648c2e0, _cmd=104, rawdata=...) at /home/nico/kde/src/kio/src/core/workerinterface.cpp:129
#43 0x00007f690a1d274a in KIO::WorkerInterface::dispatch (this=0x1648c2e0) at /home/nico/kde/src/kio/src/core/workerinterface.cpp:60
#44 0x00007f690a1cfef5 in KIO::Worker::gotInput (this=0x1648c2e0) at /home/nico/kde/src/kio/src/core/worker.cpp:263
#45 0x00007f690a1d2369 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (KIO::Worker::*)()>::call(void (KIO::Worker::*)(), KIO::Worker*, void**)::{lambda()#1}::operator()() const (__closure=0x7ffea00045e0) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:153
#46 0x00007f690a1d2480 in QtPrivate::FunctorCallBase::call_internal<void, QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (KIO::Worker::*)()>::call(void (KIO::Worker::*)(), KIO::Worker*, void**)::{lambda()#1}>(void**, QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (KIO::Worker::*)()>::call(void (KIO::Worker::*)(), KIO::Worker*, void**)::{lambda()#1}&&) (args=0x7ffea0004738, fn=...) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:72
#47 0x00007f690a1d23cc in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (KIO::Worker::*)()>::call(void (KIO::Worker::*)(), KIO::Worker*, void**) (f=(void (KIO::Worker::*)(class KIO::Worker * const)) 0x7f690a1cfeb2 <KIO::Worker::gotInput()>, o=0x1648c2e0, arg=0x7ffea0004738) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:152
#48 0x00007f690a1d22a8 in QtPrivate::FunctionPointer<void (KIO::Worker::*)()>::call<QtPrivate::List<>, void>(void (KIO::Worker::*)(), KIO::Worker*, void**) (f=(void (KIO::Worker::*)(class KIO::Worker * const)) 0x7f690a1cfeb2 <KIO::Worker::gotInput()>, o=0x1648c2e0, arg=0x7ffea0004738) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:200
#49 0x00007f690a1d2159 in QtPrivate::QCallableObject<void (KIO::Worker::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x18a0d7a0, r=0x1648c2e0, a=0x7ffea0004738, ret=0x0) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:571
#50 0x00007f69073fbcd2 in QtPrivate::QSlotObjectBase::call (this=0x18a0d7a0, r=<optimized out>, a=0x7ffea0004738) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qobjectdefs_impl.h:487
#51 doActivate<false> (sender=0x1dcd1920, signal_index=3, argv=0x7ffea0004738) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qobject.cpp:4120
#52 0x00007f690a0522d1 in KIO::Connection::readyRead (this=0x1dcd1920) at /home/nico/kde/build/kio/src/core/KF6KIOCore_autogen/include/moc_connection_p.cpp:139
#53 0x00007f690a051121 in KIO::ConnectionPrivate::dequeue (this=0x17fee370) at /home/nico/kde/src/kio/src/core/connection.cpp:32
#54 0x00007f690a051141 in operator() (__closure=0x1678c260) at /home/nico/kde/src/kio/src/core/connection.cpp:41
#55 0x00007f690a0530d9 in operator() (__closure=0x7ffea0004860) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:142
#56 0x00007f690a053214 in QtPrivate::FunctorCallBase::call_internal<void, QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, KIO::ConnectionPrivate::commandReceived(const KIO::Task&)::<lambda()> >::call(KIO::ConnectionPrivate::commandReceived(const KIO::Task&)::<lambda()>&, void**)::<lambda()> >(void **, struct {...} &&) (args=0x20f69ac8, fn=...) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:72
#57 0x00007f690a05310f in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, KIO::ConnectionPrivate::commandReceived(const KIO::Task&)::<lambda()> >::call(struct {...} &, void **) (f=..., arg=0x20f69ac8) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:141
#58 0x00007f690a052f8d in QtPrivate::FunctorCallable<KIO::ConnectionPrivate::commandReceived(const KIO::Task&)::<lambda()> >::call<QtPrivate::List<>, void>(struct {...} &, void *, void **) (f=..., arg=0x20f69ac8) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:363
#59 0x00007f690a052da1 in QtPrivate::QCallableObject<KIO::ConnectionPrivate::commandReceived(const KIO::Task&)::<lambda()>, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=1, this_=0x1678c250, r=0x1dcd1920, a=0x20f69ac8, ret=0x0) at /home/nico/kde/usr/include/QtCore/qobjectdefs_impl.h:573
#60 0x00007f69073ed4af in QObject::event (this=0x1dcd1920, e=0x20f69a80) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qobject.cpp:1419
#61 0x00007f690858c475 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x1dcd1920, e=0x20f69a80) at /home/nico/workspace/qt6/qtbase/src/widgets/kernel/qapplication.cpp:3294
#62 0x00007f6907394dd8 in QCoreApplication::notifyInternal2 (receiver=0x1dcd1920, event=0x20f69a80) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qcoreapplication.cpp:1154
#63 0x00007f6907394fed in QCoreApplication::sendEvent (receiver=<optimized out>, event=<optimized out>) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qcoreapplication.cpp:1598
#64 0x00007f69073989fe in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x15c32500) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qcoreapplication.cpp:1954
#65 0x00007f6907399cbc in QCoreApplication::sendPostedEvents (receiver=<optimized out>, event_type=<optimized out>) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qcoreapplication.cpp:1786
#66 0x00007f69076847a7 in postEventSourceDispatch (s=0x15cecad0) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:245
#67 0x00007f6904626e8c in g_main_dispatch (context=0x7f68ec000f30) at ../glib/gmain.c:3344
#68 g_main_context_dispatch_unlocked (context=0x7f68ec000f30) at ../glib/gmain.c:4152
#69 0x00007f6904688c98 in g_main_context_iterate_unlocked.isra.0 (context=context@entry=0x7f68ec000f30, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4217
#70 0x00007f6904628383 in g_main_context_iteration (context=0x7f68ec000f30, may_block=1) at ../glib/gmain.c:4282
#71 0x00007f6907683f13 in QEventDispatcherGlib::processEvents (this=0x15c367e0, flags=...) at /home/nico/workspace/qt6/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:395
#72 0x00007f69073a3112 in QEventLoop::exec (this=this@entry=0x7ffea0004e20, flags=..., flags@entry=...) at /home/nico/workspace/qt6/qtbase/src/corelib/global/qflags.h:34
#73 0x00007f690739eb4a in QCoreApplication::exec () at /home/nico/workspace/qt6/qtbase/src/corelib/global/qflags.h:74
#74 0x00007f6907bcfb20 in QGuiApplication::exec () at /home/nico/workspace/qt6/qtbase/src/gui/kernel/qguiapplication.cpp:1974
#75 0x00007f690858c3e9 in QApplication::exec () at /home/nico/workspace/qt6/qtbase/src/widgets/kernel/qapplication.cpp:2562
#76 0x000000000044eab3 in main (argc=<optimized out>, argv=<optimized out>) at /home/nico/kde/src/dolphin/src/main.cpp:273
Comment 3 Nicolas Fella 2024-08-12 19:39:43 UTC
*** Bug 486244 has been marked as a duplicate of this bug. ***
Comment 4 Nicolas Fella 2024-08-12 19:39:52 UTC
*** Bug 471985 has been marked as a duplicate of this bug. ***
Comment 5 Nicolas Fella 2024-08-12 19:40:03 UTC
*** Bug 465097 has been marked as a duplicate of this bug. ***
Comment 6 Bug Janitor Service 2024-08-12 21:32:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kwidgetsaddons/-/merge_requests/262
Comment 7 Bug Janitor Service 2024-08-12 21:38:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kguiaddons/-/merge_requests/127
Comment 8 Nicolas Fella 2024-08-19 11:30:57 UTC
Git commit bbbc7b8105e30761a72888190b70589939e92c85 by Nicolas Fella.
Committed on 19/08/2024 at 11:13.
Pushed by nicolasfella into branch 'master'.

[kjobwidgets] Store window in a QPointer

The widget/window may be deleted at any time

Store it in a QPointer so that we avoid accessing a dangling pointer
Related: bug 448532

M  +6    -4    src/kjobwidgets.cpp

https://invent.kde.org/frameworks/kwidgetsaddons/-/commit/bbbc7b8105e30761a72888190b70589939e92c85
Comment 9 Nicolas Fella 2024-08-19 11:31:44 UTC
Git commit 780b2961e58e73b6f9ce9c654155e3f2bcc2d66b by Nicolas Fella.
Committed on 19/08/2024 at 11:31.
Pushed by nicolasfella into branch 'master'.

[kjobwidgets] Store window in a QPointer

The widget/window may be deleted at any time

Store it in a QPointer so that we avoid accessing a dangling pointer
Related: bug 448532

M  +3    -2    src/util/kjobwindows.cpp

https://invent.kde.org/frameworks/kguiaddons/-/commit/780b2961e58e73b6f9ce9c654155e3f2bcc2d66b
Comment 10 Nate Graham 2025-01-13 19:55:28 UTC
*** Bug 498607 has been marked as a duplicate of this bug. ***