[kjobwidgets] Store window in a QPointer

The widget/window may be deleted at any time

Store it in a QPointer so that we avoid accessing a dangling pointer

BUG: 491637

CCBUG: 448532